# pib-testing-docker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pcds-ioc-builder
builder/: requirements.txt
docker/: Dockerfile.base  Dockerfile.builder  Dockerfile.epics-base  Dockerfile.modules  Dockerfile.softIoc
modules/R7.0.2-2.0.1/: base.yaml
pcds_ioc_builder/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt
pcds_ioc_builder/.github/workflows/: standard.yml
pcds_ioc_builder/conda-recipe/: meta.yaml
pcds_ioc_builder/docs/source/: conf.py  index.rst
pcds_ioc_builder/pcds_ioc_builder/: build.py  cli.py  exceptions.py  git.py  makefile.py  module.py  spec.py  util.py
pib/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml
pib/.github/workflows/: standard.yml
pib/conda-recipe/: meta.yaml
pib/docs/source/: conf.py  index.rst
pib/pib/: build.py  cli.py  config.py  default_config.json  exceptions.py  git.py  makefile.py  module.py  spec.py  syspkg.py  util.py
pib/pib/tests/: test_makefile.py  test_site.py
softIoc/: build.yaml
softIoc/configure/: RELEASE
softIoc/iocBoot/iocsoftIoc/: envPaths  st.cmd
softIoc/softIocApp/Db/: Makefile
softIoc/softIocApp/src/: Makefile  softIocMain.cpp
specs/R7.0.2-2.0.1_v1/: base.yaml  modules.yaml
specs/R7.0.2-23.05-1/: base.yaml  modules.yaml
support/: bashrc  mamba  mambarc  python
